--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^3.1.9",
+    "@astrojs/rss": "^4.0.9",
     "@astrojs/tailwind": "^5.1.2",
     "@fontsource-variable/inter": "^5.1.0",
     "@iconify-json/mingcute": "^1.2.1",
