--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^18.3.1",
     "astro": "^4.16.10",
     "astro-cloudinary": "^1.3.0",
+    "astro-font": "^0.1.81",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
