--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "astro-cloudinary": "^1.3.0",
     "astro-font": "^0.1.81",
     "dotenv": "^16.4.5",
+    "motion": "^11.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.14",
