--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "astro": "^4.16.10",
     "astro-cloudinary": "^1.3.0",
     "astro-font": "^0.1.81",
+    "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
     "motion": "^11.13.1",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
