--- a/package.json
+++ b/package.json
@@ -12,30 +12,32 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/db": "^0.14.5",
-    "@astrojs/mdx": "^3.1.9",
+    "@astrojs/mdx": "^4.0.3",
+    "@astrojs/netlify": "^6.0.1",
     "@astrojs/react": "^3.6.3",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/tailwind": "^5.1.4",
     "@fontsource-variable/inter": "^5.1.0",
     "@iconify-json/mingcute": "^1.2.1",
     "@libsql/client": "^0.14.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "astro": "^4.16.10",
-    "astro-cloudinary": "^1.3.0",
+    "astro": "^5.0.0",
     "astro-font": "^0.1.81",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.38.2",
     "motion": "^11.13.1",
-    "nanostores": "^0.11.3",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "reading-time": "^1.5.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@iconify-json/lineicons": "^1.2.4",
     "@iconify-json/mdi": "^1.2.1",
     "astro-icon": "^1.1.2"
   }
