--- a/package.json
+++ b/package.json
@@ -21,20 +21,27 @@
     "@fontsource-variable/inter": "^5.1.0",
     "@iconify-json/mingcute": "^1.2.1",
     "@libsql/client": "^0.14.0",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "astro": "^5.0.0",
     "astro-font": "^0.1.81",
     "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.38.2",
+    "lucide-react": "^0.469.0",
     "motion": "^11.13.1",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "reading-time": "^1.5.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.6.3"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.6.3",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@iconify-json/lineicons": "^1.2.4",
