--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,4 @@
+
 {
   "extends": "astro/tsconfigs/base",
   "compilerOptions": {
@@ -13,6 +14,9 @@
       ],
       "@utils/*": [
         "src/utils/*"
+      ],
+      "@/*": [
+        "./src/*"
       ]
     },
     "allowJs": true,
