--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-dom": "^18.3.1",
     "astro": "^5.1.3",
     "astro-font": "^0.1.81",
+    "astro-robots-txt": "^1.0.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
